@@ -1,11 +1,11 @@
 package com.ohgiraffers.datajpa.menu.service;
 
+import com.ohgiraffers.datajpa.menu.dto.CategoryDTO;
 import com.ohgiraffers.datajpa.menu.dto.MenuDTO;
 import com.ohgiraffers.datajpa.menu.entity.Category;
 import com.ohgiraffers.datajpa.menu.entity.Menu;
 import com.ohgiraffers.datajpa.menu.respository.CategoryRepository;
 import com.ohgiraffers.datajpa.menu.respository.MenuRepository;
-import jakarta.transaction.Transactional;
 import lombok.RequiredArgsConstructor;
 import org.modelmapper.ModelMapper;
 import org.springframework.data.domain.Page;
@@ -13,6 +13,7 @@ import org.springframework.data.domain.PageRequest;
 import org.springframework.data.domain.Pageable;
 import org.springframework.data.domain.Sort;
 import org.springframework.stereotype.Service;
+import org.springframework.transaction.annotation.Transactional;
 
 import java.util.List;
 import java.util.stream.Collectors;
@@ -24,8 +25,6 @@ public class MenuService {
     private final MenuRepository menuRepository;
     private final ModelMapper modelMapper;
     private final CategoryRepository categoryRepository;
-
-
 
     /* DTO와 Entity의 분리
      * DTO(Data Transfer Object)는 프레젠테이션 계층과의 데이터 교환을 위한 객체로,
@@ -80,47 +79,41 @@ public class MenuService {
     /* 4. 쿼리 메소드 활용 */
     public List<MenuDTO> findByMenuPrice(Integer menuPrice) {
 
-	/*List<Menu> menuList = menuRepository.findByMenuPriceGreaterThan(menuPrice);*/
-	/*List<Menu> menuList = menuRepository.findByMenuPriceGreaterThanOrderByMenuPrice(menuPrice);*/
-        List<Menu> menuList = menuRepository.findByMenuPriceGreaterThan(menuPrice,
-                Sort.by("menuPrice").descending()
+        //List<Menu> menuList = menuRepository.findByMenuPriceGreaterThan(menuPrice);
+//        List<Menu> menuList = menuRepository.findByMenuPriceGreaterThanOrderByMenuPrice(menuPrice);
+        List<Menu> menuList = menuRepository.findByMenuPriceGreaterThan(menuPrice
+            , Sort.by("menuPrice").descending()
         );
 
-        return menuList.stream()
-                .map(menu -> modelMapper.map(menu, MenuDTO.class))
-                .collect(Collectors.toList());
+        return menuList.stream().map(menu -> modelMapper.map(menu, MenuDTO.class)).toList();
     }
 
-    public List<Category> findAllCategory() {
-
+    /* 5. JPQL or Native Query */
+    public List<CategoryDTO> findALlCategory(){
         List<Category> categoryList = categoryRepository.findAllCategory();
-        return categoryList.stream().map(category -> modelMapper.map(category, Category.class)).toList();
-
+        return categoryList.stream().map(category -> modelMapper.map(category, CategoryDTO.class)).toList();
     }
 
-    // 등록
+    /* 6. save: 엔터티 저장*/
     @Transactional
-    public void registNewMenu(MenuDTO menuDTO) {
-        menuRepository.save(modelMapper.map(menuDTO,Menu.class));
+    public void registMenu(MenuDTO menuDTO) {
+        menuRepository.save(modelMapper.map(menuDTO, Menu.class));
     }
 
-    // 수정
+    /* 수정 : 엔터티 객체의 필드 값을 수정 */
     @Transactional
     public void modifyMenu(MenuDTO menuDTO) {
-        Menu foundMenu
-                = menuRepository.findById(menuDTO.getMenuCode())
+        // menuCode를 통해서 영속화된 변경할 정보를 조회
+        Menu foundMenu = menuRepository.findById(menuDTO.getMenuCode())
                 .orElseThrow(IllegalArgumentException::new);
-
-        /* setter 사용 (지양)
-         * 이름 수정 메서드를 정의하여 사용 */
+        // setter를 기계적으로 만들어 놓으면 엔터티 객체가 수정에 열린 상태가 되므로
+        // 필요한 기능에 맞춘 메소드를 구현해서 수정
         foundMenu.modifyMenuName(menuDTO.getMenuName());
     }
 
-    // 삭제
+    /* 8. delete */
     @Transactional
-    public void deleteMenu(Integer menuCode) {
+    public void deleteMenu(int menuCode) {
         menuRepository.deleteById(menuCode);
     }
-
-
 }
